--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
         body {
             font-family: 'Arial', sans-serif;
-            background: linear-gradient(to bottom right, pink, lavender);
+            background: pink;
             color: #333;
             text-align: center;
             padding-top: 50px;
