--- a/index.html
+++ b/index.html
@@ -51,5 +51,10 @@
     <br>
      As I continue to grow and learn, expect this website to evolve and showcase my expanding expertise.
     </p>
+        <script>
+        window.addEventListener('load', function() {
+            alert("Welcome to my website!");
+        });
+    </script>
 </body>
 </html>
