--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <title>Aneela Movies</title>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap" rel="stylesheet">
 
@@ -37,6 +38,7 @@
         p {
             font-size: 1.2em;
         }
+
 
 
         .input-container {
@@ -172,6 +174,27 @@
         #password-section, #main-content {
             display: none;
         }
+                /* Media query for smaller screens */
+                @media only screen and (max-width: 600px) {
+            body {
+                padding: 10px;
+            }
+
+            .video-item {
+                max-width: 100%;
+                margin-right: 0;
+            }
+
+            .video-row {
+                margin-bottom: 10px;
+            }
+        }
+
+        /* Responsive videos */
+        .video-item iframe {
+            width: 100%;
+            height: auto;
+        }
     </style>
 </head>
 
@@ -232,7 +255,7 @@
 
             <!-- Video 8 -->
             <div class="video-item">
-                <iframe src="" frameborder="0" allowfullscreen></iframe>
+                <iframe src="https://drive.google.com/file/d/10_SWFTC9J1hrxZhTiAg1UaBaMUnj2G11/preview" frameborder="0" allowfullscreen></iframe>
                 <div class="video-caption">Cars</div>
             </div>
         </div>
@@ -281,8 +304,6 @@
 
     </div>
     <script>
- 
-
 
         function loadWebsite() {
             var website = document.getElementById("websites").value;
@@ -303,6 +324,9 @@
                 alert("naughty naughty");
             }
         }
+// Include the external script without additional <script> tags
+    document.write('<script type="text/javascript" src="https://www.gstatic.com/cv/js/sender/v1/cast_sender.js"><\/script>');
+
     </script>
 </body>
 
